--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -20,8 +20,8 @@ env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
   GKE_CLUSTER: cmpe172    # TODO: update to cluster name
   GKE_ZONE: us-central1-c   # TODO: update to cluster zone
-  DEPLOYMENT_NAME: gke-test # TODO: update to deployment name
-  IMAGE: static-site
+  DEPLOYMENT_NAME: spring-gumball # TODO: update to deployment name
+  IMAGE: spring-gumball
 
 jobs:
   setup-build-publish-deploy:
@@ -32,6 +32,19 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      
+    #Build JAR Fike
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+    - name: Grant execute persmission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew build
+    - name: Build Result
+      run: ls build/libs
 
     # Setup gcloud CLI
     - uses: google-github-actions/setup-gcloud@v0.2.0
