--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,7 +17,6 @@ spec:
     spec:
       containers:
       - name: spring-gumball
-        image: guillerd/spring-gumball:v2
+        image: gcr.io/PROJECT_ID/IMAGE:TAG
         ports:
         - containerPort: 8080
-
